[package]
name = "bili_rank"
version = "0.1.0"
edition = "2021"
description = "Bilibili video online ranking crawler"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
parking_lot = "0.12"

[[bin]]
name = "bili_rank"
path = "src/main.rs"
